Add schema definiton for history to be used in temp live view historical data

--- a/apps/weather_web/lib/weather_web/templates/layout/app.html.eex
+++ b/apps/weather_web/lib/weather_web/templates/layout/app.html.eex
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Home Hub</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
     <script defer src="https://kit.fontawesome.com/4d79533d4f.js" crossorigin="anonymous"></script>
   </head>
   <body>    
@@ -14,6 +15,6 @@
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
       <%= render @view_module, @view_template, assigns %>
     </main>
-    <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>    
   </body>
 </html>
