--- a/apps/weather_web/lib/weather_web/templates/user/index.html.leex
+++ b/apps/weather_web/lib/weather_web/templates/user/index.html.leex
@@ -1,28 +1,42 @@
-<h2>Listing Users, page <%= @page %></h2>
+<div class="w-screen mt-2">
+  <div class="container mx-auto px-4">
+    <div class="flex flex-col">
+      <div class="text-center text-5xl">Users</div>
+    </div>
+  </div>
+</div>
 
-<table class="table-auto">
-  <thead>
-    <tr>
-      <th class="px-4 py-2">User_Id</th>
-      <th class="px-4 py-2">Email</th>
-      <th class="px-4 py-2">Role</th>
-      <th class="px-4 py-2">Active</th>
-    </tr>
-  </thead>
-  <tbody>
-<%= for {user, idx} <- Enum.with_index(@users) do %>
-    <tr <%= if rem(idx, 2) == 0 do %>class="bg-gray-100"<% end %>>
-      <td class="border px-4 py-2"><%= user.id %></td>
-      <td class="border px-4 py-2"><%= user.email_address %></td>
-      <td class="border px-4 py-2"><%= user.role.name %></td>
-      <td class="border px-8 py-2">
-        <%= if user.active == true do %>
-          <i class="fas fa-check text-2xl text-green-600"></i>
-        <% else %>
-          <i class="fas fa-times text-2xl text-red-600"></i>
-        <% end %>
-      </td>
-    </tr>
-<% end %>    
-  </tbody>
-</table>
+<div class="w-screen mt-2">
+  <div class="container mx-auto px-4">
+    <div class="font-mono flex flex-col">
+      <table class="table-auto my-1">
+        <thead>
+          <tr>
+            <th class="px-4 py-2">User_Id</th>
+            <th class="px-4 py-2">Email</th>
+            <th class="px-4 py-2">Role</th>
+            <th class="px-4 py-2">Active</th>
+          </tr>
+        </thead>
+        <tbody>
+      <%= for {user, idx} <- Enum.with_index(@users) do %>
+          <tr <%= if rem(idx, 2) == 0 do %>class="bg-gray-100"<% end %>>
+            <td class="border px-4 py-2 text-center"><%= user.id %></td>
+            <td class="border px-4 py-2 text-center"><%= user.email_address %></td>
+            <td class="border px-4 py-2 text-center"><%= user.role.name %></td>
+            <td class="border px-8 py-2 text-center">
+              <button phx-click="change_active_user" phx-value-id="<%= user.id %>">
+                <%= if user.active == true do %>
+                  <i class="fas fa-check text-2xl text-green-600"></i>
+                <% else %>
+                  <i class="fas fa-times text-2xl text-red-600"></i>
+                <% end %>
+              </button>
+            </td>
+          </tr>
+      <% end %>    
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
