Add gen stage for testing and update UI

--- a/apps/weather_web/lib/weather_web/templates/layout/app.html.eex
+++ b/apps/weather_web/lib/weather_web/templates/layout/app.html.eex
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Home Hub</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <link rel="icon" type="image/png" href="<%= Routes.static_path(@conn, "/favicon.png") %>"/>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
     <script defer src="https://kit.fontawesome.com/4d79533d4f.js" crossorigin="anonymous"></script>
   </head>
