--- a/apps/weather_web/lib/weather_web/templates/user/new.html.eex
+++ b/apps/weather_web/lib/weather_web/templates/user/new.html.eex
@@ -1,29 +1,32 @@
-<h2>User Registration</h2>
+<div class="w-screen mt-2">
+  <div class="container mx-auto px-4">
+    <div class="flex flex-col">    
+      <%= form_for @user, Routes.user_path(@conn, :create), [class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"], fn f -> %>
+          <%= if @user.action do %>
+            <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+              <span class="block sm:inline">Please check the errors below.</span>
+              <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+                <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+              </span>
+            </div>
+          <% end %>
+        <div class="mb-4">
+          <%= label f, :email_address, class: "block text-gray-700 text-sm font-bold mb-2" %>
+          <%= error_tag f, :email_address %>
+          <%= text_input f, :email_address, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
 
-<div class="w-full max-w-xs">
-  <%= form_for @user, Routes.user_path(@conn, :create), [class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"], fn f -> %>
-    <%= if @user.action do %>
-      <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
-        <span class="block sm:inline">Please check the errors below.</span>
-        <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
-          <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
-        </span>
-      </div>
-    <% end %>
-  <div class="mb-4">
-    <%= label f, :email_address, class: "block text-gray-700 text-sm font-bold mb-2" %>
-    <%= error_tag f, :email_address %>
-    <%= text_input f, :email_address, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
+          <%= label f, :password, class: "block text-gray-700 text-sm font-bold mb-2" %>
+          <%= error_tag f, :password %>
+          <%= password_input f, :password, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
 
-    <%= label f, :password, class: "block text-gray-700 text-sm font-bold mb-2" %>
-    <%= error_tag f, :password %>
-    <%= password_input f, :password, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
-
-    <%= label f, :password_confirmation, class: "block text-gray-700 text-sm font-bold mb-2" %>
-    <%= error_tag f, :password_confirmation %>
-    <%= password_input f, :password_confirmation, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
-    <div class="flex justify-center py-4">
-      <%= submit "Submit", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold    px-4 rounded focus:outline-none focus:shadow-outline" %>
+          <%= label f, :password_confirmation, class: "block text-gray-700 text-sm font-bold mb-2" %>
+          <%= error_tag f, :password_confirmation %>
+          <%= password_input f, :password_confirmation, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
+          <div class="flex justify-center py-4">
+            <%= submit "Submit", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold    px-4 rounded focus:outline-none focus:shadow-outline" %>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
-<% end %>
+</div>
