--- a/apps/weather_web/lib/weather_web/templates/user/reset.html.eex
+++ b/apps/weather_web/lib/weather_web/templates/user/reset.html.eex
@@ -1,7 +1,7 @@
 <div class="w-screen mt-2">
   <div class="container mx-auto px-4">
     <div class="flex flex-col">
-      <div class="text-center text-5xl">Register</div>
+      <div class="text-center text-5xl">Reset Your Password</div>
     </div>
   </div>
 </div>
@@ -9,7 +9,7 @@
 <div class="w-screen mt-2">
   <div class="container mx-auto px-4">
     <div class="flex flex-col">    
-      <%= form_for @user, Routes.user_path(@conn, :create), [class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"], fn f -> %>
+      <%= form_for @user, Routes.user_path(@conn, :reset, @user.data), [class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"], fn f -> %>
           <%= if @user.action do %>
             <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
               <span class="block sm:inline">Please check the errors below.</span>
@@ -19,10 +19,6 @@
             </div>
           <% end %>
         <div class="mb-4">
-          <%= label f, :email_address, class: "block text-gray-700 text-sm font-bold mb-2" %>
-          <%= error_tag f, :email_address %>
-          <%= text_input f, :email_address, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
-
           <%= label f, :password, class: "block text-gray-700 text-sm font-bold mb-2" %>
           <%= error_tag f, :password %>
           <%= password_input f, :password, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
