--- a/apps/weather_web/lib/weather_web/templates/user/reset.html.eex
+++ b/apps/weather_web/lib/weather_web/templates/user/reset.html.eex
@@ -9,7 +9,7 @@
 <div class="w-screen mt-2">
   <div class="container mx-auto px-4">
     <div class="flex flex-col">    
-      <%= form_for @user, Routes.user_path(@conn, :reset, @user.data), [class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"], fn f -> %>
+      <%= form_for @user, Routes.user_path(@conn, :reset, @token), [class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"], fn f -> %>
           <%= if @user.action do %>
             <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
               <span class="block sm:inline">Please check the errors below.</span>
@@ -26,6 +26,7 @@
           <%= label f, :password_confirmation, class: "block text-gray-700 text-sm font-bold mb-2" %>
           <%= error_tag f, :password_confirmation %>
           <%= password_input f, :password_confirmation, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
+
           <div class="flex justify-center py-4">
             <%= submit "Submit", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold    px-4 rounded focus:outline-none focus:shadow-outline" %>
           </div>
